[package]
name = "xkcd_api"
version = "0.1.0"
authors = ["Galen G <git@galenguyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.21.0"
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
mio_httpc = { version = "0.8", features = ["native"] }